Updated the ipynb

--- a/SEB Data challenge.ipynb
+++ b/SEB Data challenge.ipynb
@@ -220,7 +220,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "All missing values are in the =LOAN= column, which is the target variable of this entire dataset. So, I decide to remove all rows with missing values in this dataset.\n"
+    "All missing values are in the `LOAN` column, which is the target variable of this entire dataset. So, I decide to remove all rows with missing values in this dataset.\n"
    ]
   },
   {
@@ -312,7 +312,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "As suspected, =LOAN= is truly categorical and should thus be an integer. `ACTIVE` contains only one value and can be dropped. There is one and only one account per customer, so the `CLIENT_ID` column can also be dropped."
+    "As suspected, `LOAN` is truly categorical and should thus be an integer. `ACTIVE` contains only one value and can be dropped. There is one and only one account per customer, so the `CLIENT_ID` column can also be dropped."
    ]
   },
   {
